<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    tools:context=".CameraChoiceActivity">

    <TextView
        android:id="@+id/txtHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/glucam"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#2979FF"
        />

    <TextView
        android:id="@+id/txtChoicePrompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_select_n_image_capture_method"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtHead"
        android:textAlignment="center"
        android:layout_marginTop="100dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#0437C3"
        />

    <Button
        android:id="@+id/btnFront"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/front_camera"
        android:layout_below="@+id/txtChoicePrompt"
        android:textAlignment="center"
        android:layout_marginTop="100dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#2979FF"
        android:background="@drawable/rounded_rectangle"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/btnRear"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/rear_camera"
        android:layout_below="@+id/btnFront"
        android:layout_marginEnd="50dp"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#2979FF"
        android:background="@drawable/rounded_rectangle"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/btnGallery"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/pick_from_gallery"
        android:layout_below="@+id/btnRear"
        android:layout_marginEnd="50dp"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#2979FF"
        android:background="@drawable/rounded_rectangle"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>