<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:foregroundTint="@color/white"
    tools:context=".ImageCaptureActivity">

    <TextView
        android:id="@+id/txtHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/glucam"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#2979FF"
        />

    <TextView
        android:id="@+id/txtPrompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_time_since_you_ate_last_meal"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="#0C49AF"
        android:layout_below="@+id/txtHead"
        android:layout_marginTop="150dp"
        />

    <EditText
        android:id="@+id/edtTxtLastEat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPrompt"
        android:hint="@string/minutes"
        android:textColorHint="#0C49AF"
        android:inputType="number"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginHorizontal="130dp"
        android:layout_marginTop="40dp"
        android:autofillHints="minutes" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/next"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"
        android:textColor="#2979FF"
        android:background="@drawable/rounded_rectangle"
        android:layout_below="@+id/edtTxtLastEat"
        android:layout_marginTop="60dp"
        />


</RelativeLayout>