<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    tools:context=".ImageCaptureActivity">

    <TextView
        android:id="@+id/txtHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/glucam"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#2979FF"
        />

    <TextView
        android:id="@+id/txtEyePrompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/left_eye"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtHead"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        />

    <TextureView
        android:id="@+id/contTextureView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtEyePrompt"
        />

    <ImageView
        android:id="@+id/imgRef"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:src="@drawable/eye"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtHead"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/frame_of_reference" />

    <Button
        android:id="@+id/btnCapture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:text="@string/capture"
        android:layout_marginBottom="20dp"
        android:textColor="#2979FF"
        android:background="@drawable/rounded_rectangle"
        />

</RelativeLayout>