<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    tools:context=".ImageCaptureActivity">

    <TextView
        android:id="@+id/txtHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/glucam"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#2979FF"
        />

    <TextView
        android:id="@+id/txtPrompt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/the_predicted_n_blood_glucose_level_is"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="#0C49AF"
        android:layout_below="@+id/txtHead"
        android:layout_marginTop="150dp"
        />

    <TextView
        android:id="@+id/txtBGL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPrompt2"
        android:text="@string/X"
        android:textSize="25sp"
        android:textColor="#2979FF"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:id="@+id/txtInfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtBGL"
        android:text=""
        android:textSize="25sp"
        android:textColor="@color/green"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        />

    <Button
        android:id="@+id/btnRecheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/recheck"
        android:textSize="25sp"
        android:textColor="#2979FF"
        android:background="@drawable/rounded_rectangle"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/txtInfer"
        android:layout_marginTop="60dp"
        />

</RelativeLayout>