<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    tools:context=".GalleryPickActivity">

    <TextView
        android:id="@+id/txtEyePrompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/left_eye"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#2979FF"
        />
    
    <ImageView
        android:id="@+id/imgView"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_baseline_image_24"
        />

    <Button
        android:id="@+id/btnChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#2979FF"
        android:textSize="20sp"
        android:background="@drawable/rounded_rectangle"
        android:text="@string/choose_from_gallery"
        />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_step"
        android:textColor="#2979FF"
        android:textSize="20sp"
        android:background="@drawable/rounded_rectangle"
        android:layout_marginTop="100dp"
        />

</LinearLayout>